--- a/about.html
+++ b/about.html
@@ -53,20 +53,20 @@
                         been the industry's standard dummy text ever since the 1500s.
                     </p>
 
-                    <a href="#" class="hero__btn">Get in touch <img src="/assets/arrow.svg" alt=""></a>
+                    <a href="#" class="hero__btn">Get in touch <img src="/Gaming-Platform/assets/arrow.svg" alt=""></a>
                 </div>
                 <div class="hero__slider">
                     <div class="slider">
 
                         <div class="slide active">
-                            <img src="/assets/hero__pic.png" alt="Slide 1">
+                            <img src="/Gaming-Platform/assets/hero__pic.png" alt="Slide 1">
                         </div>
                         <div class="slide">
-                            <img src="/assets/hero__pic.png" alt="Slide 2">
+                            <img src="/Gaming-Platform/assets/hero__pic.png" alt="Slide 2">
                         </div>
 
                         <div class="slider-nav">
-                            <button class="nav-btn prev" aria-label="Previous slide"><img src="/assets/arrow-lt.png"
+                            <button class="nav-btn prev" aria-label="Previous slide"><img src="/Gaming-Platform/assets/arrow-lt.png"
                                     alt=""></button>
 
                             <div class="pagination">
@@ -77,7 +77,7 @@
                                 <button class="pagination-dot" data-slide="1" aria-label="Go to slide 2">2</button>
                             </div>
 
-                            <button class="nav-btn next" aria-label="Next slide"><img src="/assets/arrow-rt.png"
+                            <button class="nav-btn next" aria-label="Next slide"><img src="/Gaming-Platform/assets/arrow-rt.png"
                                     alt=""></button>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
         <section class="description">
             <div class="container">
                 <div class="description__wrapper">
-                    <img src="/assets/description.png" alt="">
+                    <img src="/Gaming-Platform/assets/description.png" alt="">
                     <div class="description__content">
                         <p class="description__subtitle">Lorem ipsum</p>
                         <h3 class="description__title">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -136,22 +136,22 @@
                     <h4 class="team__title">Our Team</h4>
                     <div class="team__cards">
                         <div class="team__card">
-                            <img src="/assets/team1.png" alt="" class="team__avatar">
+                            <img src="/Gaming-Platform/assets/team1.png" alt="" class="team__avatar">
                             <p class="team__name">John peter</p>
                             <p class="team__descr">COO</p>
                         </div>
                         <div class="team__card">
-                            <img src="/assets/team2.png" alt="" class="team__avatar">
+                            <img src="/Gaming-Platform/assets/team2.png" alt="" class="team__avatar">
                             <p class="team__name">John peter</p>
                             <p class="team__descr">COO</p>
                         </div>
                         <div class="team__card">
-                            <img src="/assets/team3.png" alt="" class="team__avatar">
+                            <img src="/Gaming-Platform/assets/team3.png" alt="" class="team__avatar">
                             <p class="team__name">John peter</p>
                             <p class="team__descr">COO</p>
                         </div>
                         <div class="team__card">
-                            <img src="/assets/team4.png" alt="" class="team__avatar">
+                            <img src="/Gaming-Platform/assets/team4.png" alt="" class="team__avatar">
                             <p class="team__name">John peter</p>
                             <p class="team__descr">COO</p>
                         </div>
@@ -219,13 +219,13 @@
                     </div>
                     <div class="footer__social">
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/facebook.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/facebook.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/instagram.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/instagram.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/twitter.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/twitter.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/linkidin.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/linkidin.png" alt=""></a>
                     </div>
 
                 </div>
@@ -237,5 +237,6 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 
 </html>
