--- a/contact.html
+++ b/contact.html
@@ -49,27 +49,27 @@
                     <h2 class="contact__title">Lorem Ipsum is simply dummy text of the printing and.</h2>
                     <p class="contact__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
                     <div class="map__wrapper">
-                        <iframe src="assets/Global.png" allowfullscreen=""
+                        <iframe src="/Gaming-Platform/assets/Global.png" allowfullscreen=""
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map-iframe" scrolling="no"></iframe>
                     </div>
                     <div class="contact__info">
                         <div class="contact__social">
                             <p class="social__title">Follow us</p>
                             <a href="#" class="contact__social-link">
-                                <img src="/assets/facebook__contact.png" alt=""></a>
+                                <img src="/Gaming-Platform/assets/facebook__contact.png" alt=""></a>
                             <a href="#" class="contact__social-link">
-                                <img src="/assets/printeres__contact.png" alt=""></a>
+                                <img src="/Gaming-Platform/assets/printeres__contact.png" alt=""></a>
                             <a href="#" class="contact__social-link">
-                                <img src="/assets/twiter__contact.png" alt=""></a>
+                                <img src="/Gaming-Platform/assets/twiter__contact.png" alt=""></a>
                             <a href="#" class="contact__social-link">
-                                <img src="/assets/linkidin__contact.png" alt=""></a>
+                                <img src="/Gaming-Platform/assets/linkidin__contact.png" alt=""></a>
                         </div>
                         <div class="contact__tel">
-                            <img src="/assets/phone.svg" alt="">
+                            <img src="/Gaming-Platform/assets/phone.svg" alt="">
                             <a href="tel:+94444455556">+94 4444 5555 6</a>
                         </div>
                         <div class="contact__address">
-                            <img src="/assets/map.svg" alt="">
+                            <img src="/Gaming-Platform/assets/map.svg" alt="">
                             <address> but also the leap into electronic <br>
                                 typesetting
                             </address>
@@ -142,13 +142,13 @@
                     </div>
                     <div class="footer__social">
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/facebook.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/facebook.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/instagram.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/instagram.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/twitter.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/twitter.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/linkidin.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/linkidin.png" alt=""></a>
                     </div>
 
                 </div>
@@ -160,5 +160,6 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 
 </html>
