--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </p>
             <button class="content__btn">Get more details</button>
           </div>
-          <img src="/assets/header__pic.png" alt="" class="header__pic">
+          <img src="/Gaming-Platform/assets/header__pic.png" alt="" class="header__pic">
         </div>
       </div>
     </header>
@@ -61,30 +61,30 @@
           </div>
           <div class="popular__cards">
             <div class="popular__card">
-              <img src="/assets/card-1.png" alt="">
+              <img src="/Gaming-Platform/assets/card-1.png" alt="">
               <div class="popular__card-info">
-                <img src="/assets/fire.svg" alt="">
+                <img src="/Gaming-Platform/assets/fire.svg" alt="">
                 <p class="card__text"><span>40</span>Followers</p>
               </div>
             </div>
             <div class="popular__card">
-              <img src="/assets/card-2.png" alt="">
+              <img src="/Gaming-Platform/assets/card-2.png" alt="">
               <div class="popular__card-info">
-                <img src="/assets/fire.svg" alt="">
+                <img src="/Gaming-Platform/assets/fire.svg" alt="">
                 <p class="card__text"><span>40</span>Followers</p>
               </div>
             </div>
             <div class="popular__card">
-              <img src="/assets/card-3.png" alt="">
+              <img src="/Gaming-Platform/assets/card-3.png" alt="">
               <div class="popular__card-info">
-                <img src="/assets/fire.svg" alt="">
+                <img src="/Gaming-Platform/assets/fire.svg" alt="">
                 <p class="card__text"><span>40</span>Followers</p>
               </div>
             </div>
             <div class="popular__card">
-              <img src="/assets/card-4.png" alt="">
+              <img src="/Gaming-Platform/assets/card-4.png" alt="">
               <div class="popular__card-info">
-                <img src="/assets/fire.svg" alt="">
+                <img src="/Gaming-Platform/assets/fire.svg" alt="">
                 <p class="card__text"><span>40</span>Followers</p>
               </div>
             </div>
@@ -105,7 +105,7 @@
               industry's standard dummy text ever since the 1500s,
             </p>
           </div>
-          <img src="/assets/lorem__pic.png" alt="" class="lorem__pic">
+          <img src="/Gaming-Platform/assets/lorem__pic.png" alt="" class="lorem__pic">
         </div>
       </div>
     </section>
@@ -125,47 +125,47 @@
           <div class="services__list-top">
 
             <div class="services__item">
-              <img src="/assets/services-pic1.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic1.png" alt="">
               <p class="services__item-info">Mobile Game Development</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
             <div class="services__item">
-              <img src="/assets/services-pic2.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic2.png" alt="">
               <p class="services__item-info">PC Game Development</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
             <div class="services__item">
-              <img src="/assets/services-pic3.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic3.png" alt="">
               <p class="services__item-info">PS4 Game Development</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
             <div class="services__item">
-              <img src="/assets/services-pic4.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic4.png" alt="">
               <p class="services__item-info">AR/VR Solutions</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
           </div>
           <div class="services__list-bottom">
             <div class="services__item">
-              <img src="/assets/services-pic5.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic5.png" alt="">
               <p class="services__item-info">AR/ VR design</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
             <div class="services__item">
-              <img src="/assets/services-pic6.png" alt="">
+              <img src="/Gaming-Platform/assets/services-pic6.png" alt="">
               <p class="services__item-info">3D Modelings</p>
               <a href="#" class="services__item-link">
-                <img src="/assets/arrow.png" alt="">
+                <img src="/Gaming-Platform/assets/arrow.png" alt="">
               </a>
             </div>
           </div>
@@ -184,12 +184,12 @@
             </p>
           </div>
           <div class="projects__prew">
-            <img class="projects__pic" src="/assets/projects1.png" alt="">
-            <img class="projects__pic" src="/assets/projects2.png" alt="">
-            <img class="projects__pic" src="/assets/projects3.png" alt="">
-            <img class="projects__pic" src="/assets/projects4.png" alt="">
-            <img class="projects__pic" src="/assets/projects5.png" alt="">
-            <img class="projects__pic" src="/assets/projects6.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects1.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects2.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects3.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects4.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects5.png" alt="">
+            <img class="projects__pic" src="/Gaming-Platform/assets/projects6.png" alt="">
           </div>
           <a href="#" class="section__link projects__link">See all</a>
         </div>
@@ -253,13 +253,13 @@
           </div>
           <div class="footer__social">
             <a href="#" class="footer__social-link">
-              <img src="/assets/facebook.png" alt=""></a>
+              <img src="/Gaming-Platform/assets/facebook.png" alt=""></a>
             <a href="#" class="footer__social-link">
-              <img src="/assets/instagram.png" alt=""></a>
+              <img src="/Gaming-Platform/assets/instagram.png" alt=""></a>
             <a href="#" class="footer__social-link">
-              <img src="/assets/twitter.png" alt=""></a>
+              <img src="/Gaming-Platform/assets/twitter.png" alt=""></a>
             <a href="#" class="footer__social-link">
-              <img src="/assets/linkidin.png" alt=""></a>
+              <img src="/Gaming-Platform/assets/linkidin.png" alt=""></a>
           </div>
 
         </div>
@@ -271,5 +271,6 @@
   </div>
   <script src="main.js"></script>
 </body>
+
 
 </html>
