--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
                             <div class="success__stories-lt">
                                 <div class="success__stories-card">
                                     <div class="success__stories-card-pic">
-                                        <img src="/assets/success__pic-1.png" alt="">
+                                        <img src="/Gaming-Platform/assets/success__pic-1.png" alt="">
                                         <div class="success__stories-info">
                                             <a class="info__card-link" href="#">John smash</a>
                                             <span>.5min</span>
@@ -77,7 +77,7 @@
                                 <div class="divaider__succes"></div>
                                 <div class="success__stories-card">
                                     <div class="success__stories-card-pic">
-                                        <img src="/assets/success__pic-2.png" alt="">
+                                        <img src="/Gaming-Platform/assets/success__pic-2.png" alt="">
                                         <div class="success__stories-info">
                                             <a class="info__card-link" href="#">John smash</a>
                                             <span>.5min</span>
@@ -96,7 +96,7 @@
                             </div>
                             <div class="success__stories-rt">
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic1.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic1.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link--pink" href="#">John smash</a>
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic2.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic2.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link" href="#">John smash</a>
@@ -116,7 +116,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic3.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic3.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link--orange" href="#">John smash</a>
@@ -126,7 +126,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic4.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic4.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link" href="#">John smash</a>
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic5.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic5.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link--green" href="#">John smash</a>
@@ -146,7 +146,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic6.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic6.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link" href="#">John smash</a>
@@ -156,7 +156,7 @@
                                     </div>
                                 </div>
                                 <div class="success__stories-row">
-                                    <img src="/assets/pic7.png" alt="">
+                                    <img src="/Gaming-Platform/assets/pic7.png" alt="">
                                     <div class="row__content">
                                         <div class="success__stories-info">
                                             <a class="row__link--purple" href="#">John smash</a>
@@ -234,13 +234,13 @@
                     </div>
                     <div class="footer__social">
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/facebook.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/facebook.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/instagram.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/instagram.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/twitter.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/twitter.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/linkidin.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/linkidin.png" alt=""></a>
                     </div>
 
                 </div>
@@ -252,5 +252,6 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 
 </html>
