--- a/profile.html
+++ b/profile.html
@@ -52,21 +52,21 @@
                     </p>
                     <div class="stats__row">
                         <div class="stat">
-                            <img class="stat__img" src="/assets/stat__pic.png" alt="">
+                            <img class="stat__img" src="/Gaming-Platform/assets/stat__pic.png" alt="">
                             <div class="stat__content">
                                 <div class="stat__number">90+</div>
                                 <div class="stat__label">Clients</div>
                             </div>
                         </div>
                         <div class="stat">
-                            <img class="stat__img" src="/assets/stat__pic-2.png" alt="">
+                            <img class="stat__img" src="/Gaming-Platform/assets/stat__pic-2.png" alt="">
                             <div class="stat__content">
                                 <div class="stat__number">30+</div>
                                 <div class="stat__label">Countries</div>
                             </div>
                         </div>
                         <div class="stat">
-                            <img class="stat__img" src="/assets/stat__pic-3.png" alt="">
+                            <img class="stat__img" src="/Gaming-Platform/assets/stat__pic-3.png" alt="">
                             <div class="stat__content">
                                 <div class="stat__number">50+</div>
                                 <div class="stat__label">Projects</div>
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="offer__wrapper">
                     <div class="offer__video">
-                        <img src="/assets/offer__video.png" alt="Video preview" class="video-preview">
+                        <img src="/Gaming-Platform/assets/offer__video.png" alt="Video preview" class="video-preview">
                         <a class="play__btn" aria-label="Play video" href="#">
                             <svg class="play__icon" viewBox="0 0 65 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -96,13 +96,13 @@
                         <p class="offer__content-descr">Lorem Ipsum is simply dummy text of the printing and typesetting
                             industry.Lorem Ipsum is simply dummy .</p>
                         <ui class="offer__content-list">
-                            <li class="offer__content-item"><img src="/assets/offer-pic.png" alt="">Lorem Ipsum is
+                            <li class="offer__content-item"><img src="/Gaming-Platform/assets/offer-pic.png" alt="">Lorem Ipsum is
                                 simply</li>
-                            <li class="offer__content-item"><img src="/assets/offer-pic.png" alt="">Lorem Ipsum is
+                            <li class="offer__content-item"><img src="/Gaming-Platform/assets/offer-pic.png" alt="">Lorem Ipsum is
                                 simply</li>
-                            <li class="offer__content-item"><img src="/assets/offer-pic.png" alt="">Lorem Ipsum is
+                            <li class="offer__content-item"><img src="/Gaming-Platform/assets/offer-pic.png" alt="">Lorem Ipsum is
                                 simply</li>
-                            <li class="offer__content-item"><img src="/assets/offer-pic.png" alt="">Lorem Ipsum is
+                            <li class="offer__content-item"><img src="/Gaming-Platform/assets/offer-pic.png" alt="">Lorem Ipsum is
                                 simply</li>
                         </ui>
                     </div>
@@ -126,10 +126,10 @@
                                 industry. </p>
                             <a href="" class="intro__btn">Read more</a>
                         </div>
-                        <img src="/assets/intro.png" alt="" class="intro__img">
+                        <img src="/Gaming-Platform/assets/intro.png" alt="" class="intro__img">
                     </div>
                     <div class="intro__block">
-                        <img src="/assets/content-pic1.png" alt="" class="intro__img">
+                        <img src="/Gaming-Platform/assets/content-pic1.png" alt="" class="intro__img">
                         <div class="intro__content">
                             <h2 class="intro__title">Lorem Ipsum is simply dummy
                                 text dummy text </h2>
@@ -158,7 +158,7 @@
                                 industry. </p>
                             <a href="" class="intro__btn">Read more</a>
                         </div>
-                        <img src="/assets/content-pic2.png" alt="" class="intro__img">
+                        <img src="/Gaming-Platform/assets/content-pic2.png" alt="" class="intro__img">
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                             <div class="testimonial">
                                 <div class="user-info">
                                     <div class="user__info-inner">
-                                        <img src="/assets/testimonial-poc1.png" alt="Viech Robert">
+                                        <img src="/Gaming-Platform/assets/testimonial-poc1.png" alt="Viech Robert">
                                         <div class="user__stats">
                                             <h3>Viech Robert</h3>
                                             <p>Warsaw, Poland</p>
@@ -204,7 +204,7 @@
                             <div class="testimonial">
                                 <div class="user-info">
                                     <div class="user__info-inner">
-                                        <img src="/assets/testimonial-pic2.png" alt="Yessica Christy">
+                                        <img src="/Gaming-Platform/assets/testimonial-pic2.png" alt="Yessica Christy">
                                         <div class="user__stats">
                                             <h3>Yessica Christy</h3>
                                             <p>Shanxi, China</p>
@@ -228,7 +228,7 @@
                             <div class="testimonial">
                                 <div class="user-info">
                                     <div class="user__info-inner">
-                                        <img src="/assets/testimonial-pic3.png" alt="Kim Young Jou">
+                                        <img src="/Gaming-Platform/assets/testimonial-pic3.png" alt="Kim Young Jou">
                                         <div class="user__stats">
                                             <h3>Kim Young Jou</h3>
                                             <p>Seoul, South Korea</p>
@@ -366,13 +366,13 @@
                     </div>
                     <div class="footer__social">
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/facebook.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/facebook.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/instagram.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/instagram.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/twitter.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/twitter.png" alt=""></a>
                         <a href="#" class="footer__social-link">
-                            <img src="/assets/linkidin.png" alt=""></a>
+                            <img src="/Gaming-Platform/assets/linkidin.png" alt=""></a>
                     </div>
 
                 </div>
@@ -384,5 +384,6 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 
 </html>
